--- a/button.css
+++ b/button.css
@@ -6,6 +6,11 @@
     border: none;
     cursor: pointer;
     margin-right: 30px;
+    transition: opacity 0.15s;
+}
+
+.Request-now:hover{
+    opacity: 0.7;
 }
 
 .add-to-cart{
@@ -17,6 +22,12 @@
     border: none;
     border-radius: 50px;
     margin-right: 30px;
+    transition: background-color 0.15s, color 0.15s;
+}
+
+.add-to-cart:hover{
+    background-color: rgb(97, 93, 12);
+    color: white;
 }
 
 .Sign-up{
@@ -28,6 +39,11 @@
     border: none;
     border-radius: 2px;
     margin-right: 30px;
+    transition: box-shadow 0.15s;
+}
+
+.Sign-up:hover{
+    box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.15);
 }
 
 .get-started{
@@ -39,6 +55,11 @@
     border: none;
     border-radius: 2px;
     margin-right: 30px;
+    transition: opacity 0.15s;
+}
+
+.get-started:active{
+    opacity: 0.7;
 }
 
 .download{
@@ -52,6 +73,16 @@
     cursor: pointer;
     border-radius: 2px;
     margin-right: 30px;
+    transition: background-color 0.15s, color 0.15s, opacity 0.15s;
+}
+
+.download:hover{
+    background-color: rgb(108, 117, 125);
+    color:white;
+}
+
+.download:active{
+    opacity: 0.7;
 }
 
 .bord{
@@ -70,6 +101,11 @@
     border: none;
     border-radius: 50px;
     margin-right: 10px;
+    transition: opacity 0.15s;
+}
+
+.apply:active{
+    opacity: 0.6;
 }
 
 .save{
@@ -83,6 +119,17 @@
     cursor: pointer;
     border-radius: 50px;
     margin-right: 30px;
+    transition: background-color 0.15s, color 0.15s, box-shadow 0.15s, opacity 0.15s;
+}
+
+.save:hover{
+    background-color: rgb(10, 102, 194);
+    color: white;
+}
+
+.save:active{
+    box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.15);
+    opacity: 0.8;
 }
 
 .linkedin{
@@ -94,6 +141,11 @@
 
 a{
     color: rgb(0, 113, 133);
+    transition: color 0.15s;
+}
+
+a:hover{
+    color:brown;
 }
 
 .stock{
@@ -109,6 +161,11 @@ a{
     height: 30px;
     width: 100px;
     border: none;
+    transition: opacity 0.15s;
+}
+
+.cart:active{
+    opacity: 0.5;
 }
 
 .buy{
@@ -120,6 +177,15 @@ a{
     height: 30px;
     width: 80px;
     border: none;
+    transition: opacity0.15s, opacity 0.15s;
+}
+
+.buy:hover{
+    opacity: 0.8;
+}
+
+.buy:active{
+    opacity:0.4;
 }
 
 .shoe{
