--- a/button.css
+++ b/button.css
@@ -415,3 +415,75 @@ p{
 .span:hover{
     text-decoration: underline;
 }
+
+.tahoma{
+    font-family: tahoma;
+    font-weight: bold;
+    font-size:32px;
+}
+
+.deal{
+    font-family: Arial;
+    border: 32px;
+}
+
+.year{
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
+.end{
+    font-size: 20px;
+    color:orange;
+    font-style: italic;
+    margin-top: 10px;
+}
+
+.course{
+    margin-left: 500px;
+    margin-top: 0;
+    font-family: verdana;
+}
+
+.heading{
+    font-weight: bold;
+    font-size: 32px;
+    color: rgb(32, 14, 14);
+    margin-bottom: 0;
+}
+
+.sub-heading{
+    font-size: 20px;
+    margin-top: 8px;
+    color:gray;
+}
+
+.details{
+    width: 300px;
+    font-size: 14px;
+}
+
+.course-get-started{
+    background-color: red;
+    color:white;
+    padding: 12px;
+    border: none;
+    cursor: pointer;
+}
+
+.task5{
+    text-align: center;
+    font-family: arial;
+    margin-top: 80px;
+}
+
+.shopping{
+    font-size:48px;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
+.link{
+    cursor:pointer;
+}
